--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,3 +6,5 @@
 @import './helper/fonts.scss';
 @import './helper/variables.scss';
 @import './components/header.scss';
+@import './components/Section_3.scss';
+@import './components/Section_4.scss';
