--- a/src/sass/helper/fonts.scss
+++ b/src/sass/helper/fonts.scss
@@ -20,11 +20,11 @@
    }
    @font-face {
 	font-family: "Raleway Regular";
-	src: url("../../fonts/Raleway-SemiBold.woff2") format("woff2"),
-		   url("../../fonts/Raleway-SemiBold.woff") format("woff");
+	src: url("../../fonts/Raleway-Regular.woff2") format("woff2"),
+		   url("../../fonts/Raleway-Regular.woff") format("woff");
    }
    @font-face {
-	font-family: "Raleway Regular";
+	font-family: "Raleway SemiBold";
 	src: url("../../fonts/Raleway-SemiBold.woff2") format("woff2"),
 		   url("../../fonts/Raleway-SemiBold.woff") format("woff");
    }
