--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,3 +6,4 @@
 @import './helper/fonts.scss';
 @import './helper/variables.scss';
 @import './components/header.scss';
+@import './components/footer.scss';
