--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -1,5 +1,6 @@
 .header a{
-	text-decoration: none;
+  text-decoration: none;
+  transition: all 0.8s;
 }
 .header {
   height: 568px;
@@ -33,7 +34,8 @@
 }
 &__nav_select {
 	display: none;
-	font-family: "Open Sans Bold";
+  font-family: "Open Sans Bold";
+
 	&:hover a{
 		color: black;
 	}
@@ -102,7 +104,12 @@ text-align: center;
 	  height: 48px;
 	  background-color: $maincolor-blue;
 	  border: solid $maincolor-blue;
-	  border-radius: 4%
+    border-radius: 4%;
+    transition: all 0.6s;
+    &:hover{
+      background-color: darkcyan;
+      border: solid darkcyan;
+    }
   }
   &__button_line{
 	  font-family: "Open Sans SemiBold";
