--- a/src/sass/components/Section_3.scss
+++ b/src/sass/components/Section_3.scss
@@ -73,6 +73,7 @@
   width: 100%;
   height: 300px;
   opacity: 0;
+  transition: all 0.6s;
 }
 .overlay:hover {
   opacity: 1;
@@ -107,6 +108,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: all 0.6s;
+}
+.overlay-icon:hover{
+  background: rgb(0, 139, 139, 0.3)
 }
 .svg-icon {
   width: 20px;
@@ -168,6 +173,6 @@
         right: 350px;
     }
     .our-team {
-        padding: 0 50px;   
+        padding: 0 50px;
     }
 }
