--- a/src/sass/helper/fonts.scss
+++ b/src/sass/helper/fonts.scss
@@ -1,30 +1,30 @@
 @font-face {
 	font-family: "Open Sans Bold";
-	src: url("../../fonts/OpenSans-Bold.woff2") format("woff2"),
-		   url("../../fonts/OpenSans-Bold.woff") format("woff");
+	src: url("../fonts/OpenSans-Bold.woff2") format("woff2"),
+		   url("../fonts/OpenSans-Bold.woff") format("woff");
    }
    @font-face {
 	font-family: "Open Sans Regular";
-	src: url("../../fonts/OpenSans-Regular.woff2") format("woff2"),
-		   url("../../fonts/OpenSans-Regular.woff") format("woff");
+	src: url("../fonts/OpenSans-Regular.woff2") format("woff2"),
+		   url("../fonts/OpenSans-Regular.woff") format("woff");
    }
    @font-face {
 	font-family: "Open Sans SemiBold";
-	src: url("../../fonts/OpenSans-SemiBold.woff2") format("woff2"),
-		   url("../../fonts/OpenSans-SemiBold.woff") format("woff");
+	src: url("../fonts/OpenSans-SemiBold.woff2") format("woff2"),
+		   url("../fonts/OpenSans-SemiBold.woff") format("woff");
    }
    @font-face {
 	font-family: "Raleway Bold";
-	src: url("../../fonts/Raleway-Bold.woff2") format("woff2"),
-		   url("../../fonts/Raleway-Bold.woff") format("woff");
+	src: url("../fonts/Raleway-Bold.woff2") format("woff2"),
+		   url("../fonts/Raleway-Bold.woff") format("woff");
    }
    @font-face {
 	font-family: "Raleway Regular";
-	src: url("../../fonts/Raleway-Regular.woff2") format("woff2"),
-		   url("../../fonts/Raleway-Regular.woff") format("woff");
+	src: url("../fonts/Raleway-Regular.woff2") format("woff2"),
+		   url("../fonts/Raleway-Regular.woff") format("woff");
    }
    @font-face {
 	font-family: "Raleway SemiBold";
-	src: url("../../fonts/Raleway-SemiBold.woff2") format("woff2"),
-		   url("../../fonts/Raleway-SemiBold.woff") format("woff");
+	src: url("../fonts/Raleway-SemiBold.woff2") format("woff2"),
+		   url("../fonts/Raleway-SemiBold.woff") format("woff");
    }
