--- a/src/sass/components/header.scss
+++ b/src/sass/components/header.scss
@@ -8,7 +8,7 @@
   width: 100%;
   margin: 0 auto;
   padding-top: 21px;
-  background: url(../../images/header/img.png);
+  background: url(../images/header/img.png);
   background-size: 100%;
 
   &__nav {
@@ -159,7 +159,7 @@ text-align: center;
   }
   @media (min-width: 1200px){
     .header{
-      background: url(../../images/header/img2.png);
+      background: url(../images/header/img2.png);
       background-size: 100%;
 
     }
