--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -155,6 +155,7 @@ textarea {
     &:hover {
         transition: 0.2s linear;
         background-color: darkcyan;
+        box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
     }
 }
 
@@ -210,7 +211,7 @@ input[type="text"]:focus:valid {
 
     &:hover {
         transition: 0.2s linear;
-        background-color: palevioletred;
+        box-shadow: 0px 0px 9px 4px rgba(255,255,255,1);
     }
 }
 
